# momav

./: README.md  parts.xlsx  todo.txt
1_cad/arm/: a_arm.prt  m_bearing_6700.prt  m_board_esc.prt  m_board_mcu.prt  m_board_servo.prt  m_brush.prt  m_cfrp_frame.prt  m_cfrp_tube.prt  m_motor_f100.prt  m_mount_bearing.prt  m_mount_body.prt  m_mount_motor.prt  m_mount_servo.prt  m_mount_tube.prt  m_prop_DJI8331.prt  m_screw_m3x22.prt  m_servo_MS325.prt
1_cad/body/: a_assembly.prt  m_arm.prt  m_board_esc.prt  m_board_pwr.prt  m_board_servo.prt  m_frame.prt  m_legs_calib.prt  m_legs_light.prt  m_legs_rigid.prt  m_lipo.prt  m_optitrack.prt  m_raspberry.prt  m_realsense.prt  m_screw_m3x8.prt  m_tether.prt
2_pcb/: problems.txt
2_pcb/esc/: momav_esc.brd  momav_esc.sch
2_pcb/imu/: momav_imu.brd  momav_imu.sch
2_pcb/power/: momav_power.brd  momav_power.sch
2_pcb/servo/: momav_servo.brd  momav_servo.sch
2_pcb/servo/info/: routing_test.pdn
3_cam/fdm/battery_holder/: Sx_a_assembly.gcode  Sx_a_assembly_fix.gcode  a_assembly.stl
3_cam/router/cfrp_arm+body/: sheet1.Part1 [1_slit].nc  sheet1.cb  sheet2.cb  (+11 more)
4_ctrl/: _cheatsheet.txt  _install.txt  console.bat  download_logs.sh  make.sh
4_ctrl/_old/: calib.launch  controller_calib.cpp  driver_imu.cpp  misc_cmake.txt
4_ctrl/momav/: CMakeLists.txt  package.xml
4_ctrl/momav/launch/: ground.launch
4_ctrl/momav/msg/: BodySetp.msg  BodyState.msg  CommanderState.msg  CommanderStream.msg  MotorSetp.msg  MotorState.msg  Remote.msg  ServoSetp.msg  ServoState.msg
4_ctrl/momav/src/: commander.cpp  controller_navigation.cpp  controller_pose.cpp  controller_wrench.cpp  driver_actuator.cpp  driver_cam.cpp  driver_remote.cpp  driver_sim.cpp  driver_track.cpp  monitor.py
4_ctrl/temp_logs/: core.launch
5_test/1_flight/: checklist.txt  overview.xlsx
5_test/6_ctrl_param_ident/: derivative_check.m  estim_body_param.xlsx  estim_motor_param.xlsx  estim_pd_param.xlsx  estim_throttle_penalty.xlsx
8_img/: _other_img.txt
9_docs/0_report/: paper.aux  paper.bbl  paper.blg  paper.out  paper.run.xml  paper.tex  references.bib  review.docx
9_docs/1_notes/: notes.xopp
9_docs/2_hardware/: imu_picker.xlsx
9_docs/9_plot_util/: startup.m  tightfig.m
(+219 files in other folders)
